--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bobril/mdx",
-  "version": "0.2.0",
-  "description": "",
+  "version": "0.3.0",
+  "description": "Default components for Bobril Mdx (*.mdxb)",
   "main": "index.ts",
   "repository": {
     "type": "git",
