chore: update version to 1.1.0 and add target attribute to links
- Updated package version from 1.0.1 to 1.1.0 in package.json and package-lock.json.
- Updated @bobril/highlighter dependency from 1.1.1 to 1.1.2.
- Updated bobril dependency from 20.9.1 to 21.0.1.
- Added a new link to bobril.com in example.tsx.
- Modified mdxA component to accept an optional target attribute for links.
- Updated tsconfig.json to include specific test files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,16 @@
     "target": "es2019",
     "resolveJsonModule": true
   },
+  "files": [
+    "index.ts",
+    "/Users/borisletocha/Research/@bobril/mdx/example.tsx"
+  ],
   "include": [
-    "**/*"
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/*.spec.d.ts",
+    "**/*Spec.ts",
+    "**/*Spec.tsx",
+    "**/*Spec.d.ts"
   ]
 }
