--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bobril/mdx",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "description": "Default components for Bobril Mdx (*.mdxb)",
     "main": "index.ts",
     "repository": {
@@ -23,6 +23,7 @@
     "homepage": "https://github.com/bobril/mdx#readme",
     "dependencies": {
         "@bobril/highlighter": "*",
+        "@bobril/mermaid": "*",
         "bobril": "*"
     }
 }
